# rust-lab3

./: Cargo.toml  LICENSE
.github/workflows/: rust-checks.yml
src/: main.rs
