[package]
name = "uj-tcs-rust-23-26"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "simple CLI with 'head' and 'tail' way to read files."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
ju-tcs-rust-23-25 = "0.1.2"
